# rollup-node

./: .codespellrc  .dockerignore  .gitignore  404.html  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  MULTIARCH_BUILD.md  Makefile  README.md  anvil_state.json  chapter_1.html  debug-toolkit.html  docker-compose.yml  docker-operations.html  dprint.json  hackathon.json  index.html  print.html  running-a-node.html  running-a-sequencer.html  rust-toolchain.toml  rustc-ice-2025-08-11T07_10_22-31852.txt  searcher-c2a407aa.js  searchindex-438e0800.js  searchindex-449e64f3.js  searchindex-52ccf182.js  searchindex-6dee36f6.js  searchindex-ab3e4552.js  searchindex-cddfffef.js  searchindex.js  toc-01f4a192.js  toc-25269dc8.js  toc-4b7614fc.js  toc-9a5263bf.js  toc-abe0f0b0.js  toc-e2596206.js  toc.html  (+1 more)
crates/chain-orchestrator/: Cargo.toml
crates/chain-orchestrator/src/: action.rs  config.rs  consensus.rs  consolidation.rs  error.rs  event.rs  handle.rs  lib.rs  metrics.rs  retry.rs  status.rs  sync.rs
crates/chain-orchestrator/src/handle/: command.rs  metrics.rs  mod.rs
crates/chain-orchestrator/testdata/: genesis_block.json  genesis_block_rpc.json
crates/codec/: Cargo.toml
crates/codec/src/: batch.rs  block.rs  chunk.rs  error.rs  lib.rs  payload.rs
crates/codec/src/decoding/: abi.rs  batch.rs  batch_header.rs  blob.rs  constants.rs  macros.rs  mod.rs  payload.rs  test_utils.rs  transaction.rs
crates/codec/testdata/: l1_messages_v0.json  l1_messages_v1.json
crates/database/db/: Cargo.toml
crates/database/db/src/: connection.rs  db.rs  error.rs  iterator.rs  lib.rs  maintenance.rs  metrics.rs  operations.rs  retry.rs  test_utils.rs  transaction.rs
crates/database/migration/: Cargo.toml
crates/database/migration/migration-data/: block_data.csv  extra_data.csv
crates/database/migration/src/: lib.rs  m20220101_000001_create_batch_commit_table.rs  m20220101_000001_create_batch_input_table.rs  m20250304_125946_add_l1_msg_table.rs  m20250408_132123_add_block_data_table.rs  m20250408_132123_add_extra_data_table.rs  m20250408_132123_add_header_metadata.rs  m20250408_150338_add_header_metadata.rs  m20250408_150338_header_metadata.rs  m20250408_150338_load_header_metadata.rs  m20250408_150338_seed_block_data_table.rs  m20250408_150338_seed_extra_data_table.rs  m20250411_072004_add_batch_to_block.rs  m20250411_072004_add_derived_block.rs  m20250411_072004_add_l2_block.rs  m20250616_223947_add_metadata.rs  m20250820_141702_block_signature.rs  main.rs  (+16 more)
crates/derivation-pipeline/: Cargo.toml
crates/derivation-pipeline/benches/: pipeline.rs
crates/derivation-pipeline/src/: cache.rs  data_source.rs  error.rs  hash.rs  lib.rs  metrics.rs  new.rs
crates/e2e-test-utils/: Cargo.toml
crates/e2e-test-utils/src/: lib.rs  node.rs
crates/engine/: Cargo.toml
crates/engine/src/: api.rs  block_info.rs  driver.rs  engine.rs  error.rs  event.rs  fc.rs  fcs.rs  lib.rs  metrics.rs  new.rs  payload.rs  test_utils.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: action.rs  error.rs  event.rs  handle.rs  lib.rs  metrics.rs
crates/l1/: Cargo.toml
crates/l1/abi/: L1MessageQueue.json  ScrollChain.json
crates/l1/src/: abi.rs  constants.rs  event.rs  lib.rs  watcher.rs
crates/manager/: Cargo.toml
crates/manager/src/: consensus.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: event.rs  handle.rs  import.rs  lib.rs  main.rs  manager.rs
crates/node/: Cargo.toml
crates/node/assets/: block.json  block_1.json  reth-mainnet.service
crates/node/src/: args.rs  bridge.rs  config.rs  consensus.rs  constants.rs  context.rs  error.rs  event.rs  lib.rs  main.rs  node.rs  pprof.rs  state.rs  test_utils.rs
crates/node/tests/: L1_MULTI_MODE_TESTS.md  NEXT_STEPS.md  STATE_LOADING_VERIFIED.md  e2e.rs  l1_data_fee_buffer.rs  l1_multi_mode.rs  l1_sync.rs  remote_block_source.rs  sync.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: attributes.rs  batch.rs  block.rs  bounded_vec.rs  chain.rs  chunk.rs  consensus.rs  error.rs  lib.rs  metadata.rs  metrics.rs  signature.rs  transaction.rs
crates/providers/: Cargo.toml
crates/providers/src/: beacon.rs  beacon_client.rs  block.rs  execution_payload.rs  l1.rs  lib.rs  test_utils.rs
crates/retry/: Cargo.toml
crates/retry/src/: database.rs  lib.rs  main.rs  models.rs  request.rs  retry.rs  tx.rs
crates/scroll-wire/: Cargo.toml
crates/scroll-wire/src/: config.rs  error.rs  lib.rs  main.rs  manager.rs  network.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: config.rs  error.rs  event.rs  lib.rs  metrics.rs
crates/sequencer/tests/: e2e.rs  main.rs
crates/signer/: Cargo.toml
crates/signer/src/: error.rs  event.rs  future.rs  handle.rs  lib.rs  metrics.rs  requests.rs  signature.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: cache.rs  constants.rs  contract.rs  error.rs  lib.rs  liveness.rs  metrics.rs  test_utils.rs
crates/watcher/tests/: indexing.rs  logs.rs  reorg.rs
tests/: .gitignore  Cargo.toml  anvil.env  anvil_state.json  discovery-secret  discovery-secret-follower  docker-compose.remote-source.yml  docker-compose.test.yml  integration.rs  l2geth-genesis-dev.json  l2geth-genesis-e2e.json  l2reth-genesis-e2e.json  launch_l1.bash  launch_l2geth.bash  launch_l2geth_follower.bash  launch_l2geth_sequencer.bash  launch_l2geth_skipsignercheck.bash  launch_rollup_node_follower.bash  launch_rollup_node_remote_source.bash  launch_rollup_node_sequencer.bash  lib.rs  main.rs  sequencer-key.txt  state.json  state_new.json
tests/common/: docker_compose.rs  mod.rs  test_clients.rs
tests/integration/: block_production.rs  block_propagation.rs  mod.rs  multi_node.rs
tests/scripts/: launch_l1.bash  launch_rollup_node.bash
tests/src/: docker_compose.rs  lib.rs  utils.rs
tests/tests/: block_production.rs  block_propagation.rs  block_propagation_multi_clients.rs  common.rs  heterogeneous_client_sync_and_sequencer_handoff.rs  migrate_sequencer.rs  remote_block_source_docker.rs
(+175 files in other folders)
