[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
exclude = [".github/"]

[workspace]
members = [
    "bin/rollup",
    "crates/codec",
    "crates/database/db",
    "crates/database/migration",
    "crates/derivation-pipeline",
    "crates/engine",
    "crates/indexer",
    "crates/l1",
    "crates/node",
    "crates/network",
    "crates/primitives",
    "crates/providers",
    "crates/scroll-wire",
    "crates/sequencer",
    "crates/watcher",
]

resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"
large_enum_variant = "allow"

[workspace.dependencies]
# alloy
alloy-chains = { version = "0.2.0", default-features = false }
alloy-consensus = { version = "0.14.0", default-features = false }
alloy-eips = { version = "0.14.0", default-features = false }
alloy-json-rpc = { version = "0.14.0", default-features = false }
alloy-network = { version = "0.14.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-provider = { version = "0.14.0", default-features = false }
alloy-rpc-client = { version = "0.14.0", default-features = false }
alloy-rpc-types-engine = { version = "0.14.0", default-features = false }
alloy-rpc-types-eth = { version = "0.14.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-transport = { version = "0.14.0", default-features = false }

# scroll-alloy
scroll-alloy-consensus = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
scroll-alloy-hardforks = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
scroll-alloy-network = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
scroll-alloy-provider = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
scroll-alloy-rpc-types-engine = { git = "https://github.com/scroll-tech/reth.git", default-features = false }

# reth
reth-e2e-test-utils = { git = "https://github.com/scroll-tech/reth.git" }
reth-eth-wire-types = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-network = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-network-api = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-network-peers = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-primitives = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-primitives-traits = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-provider = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-tasks = { git = "https://github.com/scroll-tech/reth.git" }
reth-tokio-util = { git = "https://github.com/scroll-tech/reth.git", default-features = false }

# reth-scroll
reth-scroll-chainspec = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-scroll-engine-primitives = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-scroll-forks = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-scroll-node = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-scroll-primitives = { git = "https://github.com/scroll-tech/reth.git", default-features = false }

# rollup node
rollup-node-indexer = { path = "crates/indexer" }
rollup-node-manager = { path = "crates/node" }
rollup-node-primitives = { path = "crates/primitives" }
rollup-node-providers = { path = "crates/providers" }
rollup-node-sequencer = { path = "crates/sequencer" }
rollup-node-watcher = { path = "crates/watcher" }
scroll-codec = { path = "crates/codec" }
scroll-db = { path = "crates/database/db" }
scroll-derivation-pipeline = { path = "crates/derivation-pipeline" }
scroll-engine = { path = "crates/engine" }
scroll-l1 = { path = "crates/l1" }
scroll-network = { path = "crates/network" }
scroll-wire = { path = "crates/scroll-wire" }
scroll-migration = { path = "crates/database/migration" }

# misc
arbitrary = { version = "1.4", default-features = false }
async-trait = "0.1"
auto_impl = "1.2"
derive_more = { version = "2.0", default-features = false }
eyre = "0.6"
futures = { version = "0.3", default-features = false }
parking_lot = "0.12"
rand = { version = "0.9" }
reqwest = "0.12"
serde = { version = "1.0" }
sea-orm = { version = "1.1.0" }
thiserror = "2.0"
tokio = { version = "1.39", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tracing = "0.1.0"
jsonrpsee = "0.24.9"
