[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
exclude = [".github/"]

[workspace]
members = [
    "crates/codec",
    "crates/database/db",
    "crates/database/migration",
    "crates/derivation-pipeline",
    "crates/engine",
    "crates/chain-orchestrator",
    "crates/l1",
    "crates/network",
    "crates/node",
    "crates/primitives",
    "crates/providers",
    "crates/scroll-wire",
    "crates/sequencer",
    "crates/signer",
    "crates/watcher",
    "tests",
]

resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"
large_enum_variant = "allow"

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[workspace.dependencies]
# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-consensus = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.0.37", default-features = false }
alloy-json-rpc = { version = "1.0.37", default-features = false }
alloy-network = { version = "1.0.37", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-provider = { version = "1.0.37", default-features = false }
alloy-rpc-client = { version = "1.0.37", default-features = false }
alloy-rpc-types-engine = { version = "1.0.37", default-features = false }
alloy-rpc-types-eth = { version = "1.0.37", default-features = false }
alloy-sol-types = { version = "1.4.1", default-features = false }
alloy-signer = { version = "1.0.37", default-features = false }
alloy-signer-local = { version = "1.0.37", default-features = false }
alloy-transport = { version = "1.0.37", default-features = false }

# scroll-alloy
scroll-alloy-consensus = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
scroll-alloy-hardforks = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
scroll-alloy-network = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
scroll-alloy-provider = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
scroll-alloy-evm = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
scroll-alloy-rpc-types = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
scroll-alloy-rpc-types-engine = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }

# reth
reth-chainspec = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-e2e-test-utils = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8" }
reth-eth-wire = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-eth-wire-types = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-network = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-network-api = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-network-p2p = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-network-peers = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-network-types = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-node-builder = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-node-core = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-node-api = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-node-types = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-payload-primitives = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-primitives = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-primitives-traits = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-provider = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-rpc-api = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-rpc-eth-api = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-rpc-eth-types = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-rpc-server-types = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-storage-api = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-tasks = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-tokio-util = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-tracing = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-transaction-pool = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-trie-db = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-testing-utils = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-revm = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-evm = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-engine-local = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-cli-util = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }

# reth-scroll
reth-scroll-chainspec = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-consensus = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-cli = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-evm = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-rpc = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-engine-primitives = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-forks = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-node = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }
reth-scroll-primitives = { git = "https://github.com/scroll-tech/reth.git", branch = "chore-merge-upstream-7779ed8", default-features = false }

# rollup node
rollup-node = { path = "crates/node" }
rollup-node-chain-orchestrator = { path = "crates/chain-orchestrator" }
rollup-node-primitives = { path = "crates/primitives" }
rollup-node-providers = { path = "crates/providers" }
rollup-node-sequencer = { path = "crates/sequencer" }
rollup-node-signer = { path = "crates/signer" }
rollup-node-watcher = { path = "crates/watcher" }
scroll-codec = { path = "crates/codec" }
scroll-db = { path = "crates/database/db" }
scroll-derivation-pipeline = { path = "crates/derivation-pipeline" }
scroll-engine = { path = "crates/engine" }
scroll-l1 = { path = "crates/l1" }
scroll-network = { path = "crates/network" }
scroll-wire = { path = "crates/scroll-wire" }
scroll-migration = { path = "crates/database/migration" }

# misc
arbitrary = { version = "1.4", default-features = false, features = ["derive"] }
async-trait = "0.1"
auto_impl = "1.2"
bitvec = { version = "1.0", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
derive_more = { version = "2.0", default-features = false }
eyre = "0.6"
futures = { version = "0.3", default-features = false }
metrics = "0.24.0"
metrics-derive = "0.1"
parking_lot = "0.12"
rand = { version = "0.9" }
reqwest = "0.12"
serde = { version = "1.0" }
serde_json = { version = "1.0" }
sea-orm = { version = "1.1.0" }
strum = "0.27.1"
thiserror = "2.0"
tokio = { version = "1.39", default-features = false, features = ["tracing"] }
tokio-stream = { version = "0.1", default-features = false }
tracing = "0.1.0"
getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
revm = { git = "https://github.com/scroll-tech/revm", branch = "feat/v88" }
op-revm = { git = "https://github.com/scroll-tech/revm", branch = "feat/v88" }

# [patch."https://github.com/scroll-tech/reth.git"]
# reth-chainspec = { path = "../reth/crates/chainspec" }
# reth-e2e-test-utils = { path = "../reth/crates/e2e-test-utils" }
# reth-eth-wire-types = { path = "../reth/crates/net/eth-wire-types" }
# reth-network = { path = "../reth/crates/net/network" }
# reth-network-api = { path = "../reth/crates/net/network-api" }
# reth-network-peers = { path = "../reth/crates/net/peers" }
# reth-network-p2p = { path = "../reth/crates/net/p2p" }
# reth-network-types = { path = "../reth/crates/net/network-types" }
# reth-node-builder = { path = "../reth/crates/node/builder" }
# reth-node-core = { path = "../reth/crates/node/core" }
# reth-node-api = { path = "../reth/crates/node/api" }
# reth-node-types = { path = "../reth/crates/node/types" }
# reth-payload-primitives = { path = "../reth/crates/payload/primitives" }
# reth-primitives = { path = "../reth/crates/primitives" }
# reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
# reth-provider = { path = "../reth/crates/storage/provider" }
# reth-rpc-builder = { path = "../reth/crates/rpc/rpc-builder" }
# reth-rpc-server-types = { path = "../reth/crates/rpc/rpc-server-types" }
# reth-rpc-api = { path = "../reth/crates/rpc/rpc-api" }
# reth-rpc-eth-api = { path = "../reth/crates/rpc/rpc-eth-api" }
# reth-rpc-eth-types = { path = "../reth/crates/rpc/rpc-eth-types" }
# reth-storage-api = { path = "../reth/crates/storage/storage-api" }
# reth-tasks = { path = "../reth/crates/tasks" }
# reth-tokio-util = { path = "../reth/crates/tokio-util" }
# reth-tracing = { path = "../reth/crates/tracing" }
# reth-transaction-pool = { path = "../reth/crates/transaction-pool" }
# reth-trie-db = { path = "../reth/crates/trie/db" }
# reth-testing-utils = { path = "../reth/testing/testing-utils" }
# reth-revm = { path = "../reth/crates/revm" }
# reth-evm = { path = "../reth/crates/evm/evm" }
# reth-cli-util = { path = "../reth/crates/cli/util" }
# reth-engine-local = { path = "../reth/crates/engine/local" }
# reth-eth-wire = { path = "../reth/crates/net/eth-wire" }
# scroll-alloy-consensus = { path = "../reth/crates/scroll/alloy/consensus" }
# scroll-alloy-hardforks = { path = "../reth/crates/scroll/alloy/hardforks" }
# scroll-alloy-network = { path = "../reth/crates/scroll/alloy/network" }
# scroll-alloy-provider = { path = "../reth/crates/scroll/alloy/provider" }
# scroll-alloy-rpc-types-engine = { path = "../reth/crates/scroll/alloy/rpc-types-engine" }
# scroll-alloy-evm = { path = "../reth/crates/scroll/alloy/evm" }
# scroll-alloy-rpc-types = { path = "../reth/crates/scroll/alloy/rpc-types" }
# reth-scroll-chainspec = { path = "../reth/crates/scroll/chainspec" }
# reth-scroll-engine-primitives = { path = "../reth/crates/scroll/engine-primitives" }
# reth-scroll-forks = { path = "../reth/crates/scroll/hardforks" }
# reth-scroll-node = { path = "../reth/crates/scroll/node" }
# reth-scroll-primitives = { path = "../reth/crates/scroll/primitives" }
# reth-scroll-evm = { path = "../reth/crates/scroll/evm" }
# reth-scroll-cli = { path = "../reth/crates/scroll/cli" }
# reth-scroll-rpc = { path = "../reth/crates/scroll/rpc" }
