[package]
name = "tests"
version = "0.0.1"
edition = "2021"

[lib]
name = "tests"
path = "src/lib.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true, features = ["reqwest", "ws"] }
alloy-rpc-types-eth = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = "1.0.36"
scroll-alloy-network = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "process"] }
eyre = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true }
reth-tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reth-e2e-test-utils.workspace = true
