[package]
name = "rollup-node-chain-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true

# rollup-node
scroll-db.workspace = true
rollup-node-primitives.workspace = true
rollup-node-watcher.workspace = true

# scroll
reth-scroll-primitives.workspace = true
scroll-alloy-consensus.workspace = true
scroll-alloy-hardforks.workspace = true
scroll-alloy-network.workspace = true
scroll-network.workspace = true

# reth
reth-chainspec.workspace = true
reth-network-p2p = { git = "https://github.com/scroll-tech/reth.git", default-features = false }
reth-network-peers.workspace = true
reth-primitives-traits.workspace = true

# misc
futures.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
strum = "0.27.1"
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-rpc-client.workspace = true
alloy-transport.workspace = true

# rollup-node
scroll-db = { workspace = true, features = ["test-utils"] }
rollup-node-primitives = { workspace = true, features = ["arbitrary"] }

# scroll
reth-scroll-chainspec.workspace = true
reth-scroll-forks.workspace = true

# reth
reth-eth-wire-types.workspace = true
reth-network-peers.workspace = true

# misc
arbitrary.workspace = true
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json = { version = "1.0" }
tokio.workspace = true
