[package]
name = "rollup-node-chain-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-transport.workspace = true

# rollup-node
scroll-alloy-provider.workspace = true
scroll-db.workspace = true
scroll-engine.workspace = true
rollup-node-providers.workspace = true
rollup-node-primitives.workspace = true
rollup-node-sequencer.workspace = true
rollup-node-signer.workspace = true
rollup-node-watcher.workspace = true

# scroll
reth-scroll-engine-primitives.workspace = true
reth-scroll-consensus.workspace = true
reth-scroll-node.workspace = true
reth-scroll-primitives.workspace = true
scroll-alloy-consensus.workspace = true
scroll-alloy-hardforks.workspace = true
scroll-alloy-network.workspace = true
scroll-derivation-pipeline.workspace = true
scroll-network.workspace = true

# reth
reth-chainspec.workspace = true
reth-network-api.workspace = true
reth-network-p2p.workspace = true
reth-network-peers.workspace = true
reth-primitives-traits.workspace = true
reth-tasks.workspace = true
reth-tokio-util.workspace = true

# misc
futures.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
alloy-rpc-client.workspace = true
alloy-transport.workspace = true

# rollup-node
scroll-db = { workspace = true, features = ["test-utils"] }
rollup-node-primitives = { workspace = true, features = ["arbitrary"] }

# scroll
reth-scroll-chainspec.workspace = true
reth-scroll-forks.workspace = true

# reth
reth-eth-wire-types.workspace = true
reth-network-peers.workspace = true
reth-tracing.workspace = true

# misc
arbitrary.workspace = true
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
test-utils = [
    "reth-chainspec/test-utils",
    "reth-network-p2p/test-utils",
    "reth-primitives-traits/test-utils",
    "reth-scroll-node/test-utils",
    "rollup-node-providers/test-utils",
    "rollup-node-watcher/test-utils",
    "scroll-db/test-utils",
    "scroll-engine/test-utils",
    "scroll-network/test-utils",
]
serde = [
    "dep:serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "parking_lot/serde",
    "rand/serde",
    "reth-eth-wire-types/serde",
    "reth-network-api/serde",
    "reth-primitives-traits/serde",
    "reth-scroll-forks/serde",
    "reth-scroll-primitives/serde",
    "scroll-alloy-consensus/serde",
    "scroll-alloy-hardforks/serde",
    "scroll-engine/serde",
    "scroll-network/serde",
]
