[package]
name = "scroll-derivation-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-primitives = { workspace = true, default-features = false }
alloy-rpc-types-engine = { workspace = true, default-features = false }

# scroll
scroll-alloy-consensus = { workspace = true, default-features = false }
scroll-alloy-rpc-types-engine.workspace = true

# rollup node
rollup-node-primitives.workspace = true
rollup-node-providers.workspace = true
scroll-codec.workspace = true
scroll-db.workspace = true

# misc
futures.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
eyre.workspace = true
scroll-db = { workspace = true, features = ["test-utils"] }
scroll-codec = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros"] }
